demo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-site
  labels:
    app: demo-site
spec:
  selector:
    matchLabels:
      app: demo-site
  template:
    metadata:
      labels:
        app: demo-site
    spec:
      nodeName: worker-k3s
      containers:
      - name: demo
        image: johannes33/express_container_test_2:latest
        resources:
          limits:
            cpu: 300m
          requests:
            cpu: 100m
        ports:
        - containerPort: 80
