demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-site-service
spec:
  selector:
    app: demo-site
  ports:
    - protocol: TCP
      port: 80
